--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,5 +1,7 @@
 <div class="container">
+
   <div class="row">
+
     <div class="col-md-4 mb-5">
       <div class="card shadow-effect">
         <div class="card-body text-center bg-secondary-theme" routerLink="/categories">
@@ -9,5 +11,17 @@
         </div>
       </div>
     </div>
+
+    <div class="col-md-4 mb-5">
+      <div class="card shadow-effect">
+        <div class="card-body text-center bg-secondary-theme" routerLink="/posts">
+          <h1 class="mt-3 text-theme-primary"><i class="fas fa-file-image"></i></h1>
+          <h2 class="text-theme-primary">Posts</h2>
+          <p>Manage your Posts details here</p>
+        </div>
+      </div>
+    </div>
+
   </div>
+
 </div>
