--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
 
   <div class="row">
 
-    <div class="col-md-4 mb-5">
+    <div class="col-md-6 mb-5">
       <div class="card shadow-effect">
         <div class="card-body text-center bg-secondary-theme" routerLink="/categories">
           <h1 class="mt-3 text-theme-primary"><i class="fas fa-clipboard-list"></i></h1>
@@ -12,12 +12,22 @@
       </div>
     </div>
 
-    <div class="col-md-4 mb-5">
+    <div class="col-md-6 mb-5">
       <div class="card shadow-effect">
         <div class="card-body text-center bg-secondary-theme" routerLink="/posts">
           <h1 class="mt-3 text-theme-primary"><i class="fas fa-file-image"></i></h1>
           <h2 class="text-theme-primary">Posts</h2>
           <p>Manage your Posts details here</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-6 mb-5">
+      <div class="card shadow-effect">
+        <div class="card-body text-center bg-secondary-theme" routerLink="/subscribers">
+          <h1 class="mt-3 text-theme-primary"><i class="fas fa-users"></i></h1>
+          <h2 class="text-theme-primary">Subscribers</h2>
+          <p>Manage your Subscriber list here</p>
         </div>
       </div>
     </div>
